# L9-Ops-MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_RETRIEVAL_INDEX.yaml  APPLY_INSTRUCTIONS.md  ARCHITECTURE.md  ARTIFACT_MANIFEST.yaml  ASSUMPTION_MAP.yaml  BUILD_MANIFEST.yaml  CHANGELOG.md  CHANGE_SUMMARY.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  DECISION_LOG.md  DEDUPLICATION_MATRIX.yaml  DEPLOY.md  MANIFEST.md  Makefile  ORG_INVARIANTS.yaml  PROVENANCE_MAP.yaml  README.md  REGRESSION_GUARD.md  RUNBOOK.md  SECURITY.md  TRACEABILITY_MAP.yaml  UNKNOWN_REGISTER.md  VALIDATION.md  docker-compose.neo4j.yml  pyproject.toml  pyproject_additions.toml  validation_results_doctrine_pass.json
assets/: CODEOWNERS  COMMIT_MESSAGE.txt  Makefile
config/: INDEX.yaml  MANIFEST.json  aci_tool_design_kernel.v1.yaml  agent_observability_kernel.v1.yaml  agent_review_kernel.v1.yaml  canonical-execution-profile.schema.yaml  context_budget_kernel.v1.yaml  convergence_plan.yaml  doc_gardener_kernel.v1.yaml  escalation_queue.yaml  eval_harness_kernel.v1.yaml  execution_plan_kernel.v1.yaml  execution_queue.yaml  governance_graph_ir.json  industrial-recycling-v1.yaml  l9_agents.yaml  llc_1a_ty2025_profile.yaml  nonprofit_launch_profile.yaml  openai.yaml  optimize-kernel-fixture.yaml  promptfooconfig.yaml  ranked_decisions.yaml  remediation_queue.yaml  rename_plan.yaml  reorg_plan.yaml  sandbox_isolation_kernel.v1.yaml
contracts/: TRANSPORT_PACKET.md
docs/: 00-L11-MASTER-README.md  02-validate-spec.md  03-scaffold-node.md  05-run-ci.md  09-L11-RUNBOOK.md  10-L11-METRICS-DASHBOARD.md  AI_Model_Drift_Monitoring_Policy_v6.0.md  BRANCH-PROTECTION-SETTINGS.md  CI_PROOF_CONTRACT.md  COMPLETION_STATUS.md  Decision_Ledger_v6.0.md  FILETREE.md  Governance_Engine_v6.0.md  HARNESS_DOCTRINE.md  INTEGRATION_GUIDE.md  KERNEL_DOCTRINE.md  L9_GOVERNANCE.md  MASTER_LOAD_INSTRUCTIONS.md  PLAYBOOK.md  PLAYBOOKS_DOCTRINE.md  PR_DEPENDENCY_ORDER.md  PostToolUse.md  PreToolUse.md  REPO_IDENTITY.md  Relational_Trust_Model_v6.0.md  SKILL.md  SKILLS_DOCTRINE.md  Stop.md  WIRING.md  action_governor_spec.md  advisor-guide-parser.md  approval-policy.md  architecture.md  canonical_epistemic_reality_validation_layer_v1.md  canonical_evaluation_layer_v1.md  canonical_identity_layer_v1.md  canonical_operational_layer_v1.md  canonical_psyche_layer_v1.md  canonical_relationship_layer_v1.md  canonical_semantic_language_layer_v1.md  (+19 more)
governance/: acap-profile-template.yaml  model_governance_kernel.v1.yaml
schemas/: action_governor_outputs.schema.json  artifact-edge.schema.json  artifact-node.schema.json  convergence_plan.schema.json  governance_graph_ir.schema.json  governance_scores.schema.json  graph-seed.schema.json  kernel.canonical.schema.json  org_invariant.schema.yaml  playbook.schema.yaml  repo_route_decision.schema.yaml  runtime_findings.schema.json  (+2 more)
scripts/: install.sh  (+45 more)
(+151 files in other folders)
